Fixing JUnit to work in CICD azure devops. moesifapi-java v1.6.13